# cpp-random-benchmarks

./: CMakeLists.txt  README.adoc  README.md
include/: burtle.h
src/: burtleburtle.cpp  c_rand.cpp  pcg.cpp  pcg32.cpp  std.cpp  xoshiro.cpp
